# cbsdSLAM

./: .gitignore  README.md  runTests.bash
depthFeatures/src/: depthfeaturescoordinator.cpp  depthfeaturescoordinator.h  icp.cpp  scanfuser.cpp
depthFeatures/tests/: testDepthFeatures.cpp
graphSLAM/: sample.py
gridmapViz/src/: gridmapviz.cpp  gridmapviz.h
laserFeatures/: extract_lidar_features.py  notes.txt  process_scan.py  scan_nparray.npy
models/: slamModels.mdj
mrptEKF/src/: KDTrees.cpp  KDTrees.hpp  mrptcoordinator.cpp  mrptcoordinator.h  mrptkf2d.cpp  mrptkf2d.h
mrptEKF/tests/: testEKF.cpp
pf/config/: config.ini
pf/src/: mrptpf.cpp  mrptpf.h  pfcoordinator.cpp  visualizer.cpp  visualizer.h
pf/tests/: testPF.cpp  unittests.cpp
primitives/: runTests.bash~
primitives/depthFeatures/: CMakeLists.txt  CMakeLists.txt~
primitives/depthFeatures/src/: depthfeaturescoordinator.h~  icp.cpp  icp.h  scanfuser.cpp  scanfuser.h
primitives/depthFeatures/tests/: testVisionFeatures.cpp~
primitives/gridmapViz/: CMakeLists.txt
primitives/gridmapViz/src/: gridmapcoordinator.cpp  gridmapcoordinator.h
primitives/gridmapViz/tests/: test_grid.cpp
primitives/mrptEKF/: CMakeLists.txt  CMakeLists.txt~
primitives/mrptEKF/config/: ekf.ini
primitives/mrptEKF/src/: mrptcoordinator.cpp  mrptcoordinator.cpp~  mrptcoordinator.h  mrptcoordinator.h~  mrptkf2d.cpp  mrptkf2d.h
primitives/mrptEKF/tests/: testEKF.cpp  testEKF.cpp~
primitives/pf/: CMakeLists.txt  CMakeLists.txt~
primitives/pf/config/: config.ini~
primitives/pf/logging/sessions/: pathEstimation
primitives/pf/src/: mrptpf.cpp  pfcoordinator.h  visualizer.cpp
primitives/visionFeatures/: CMakeLists.txt  CMakeLists.txt~  todo.txt~
primitives/visionFeatures/config/: config.yaml  config.yaml~
primitives/visionFeatures/src/: arucodetectorcv2.cpp~  arucodetectorcv2.h~  visionfeaturescoordinator.cpp  visionfeaturescoordinator.h~
primitives/vo/config/: config.yaml  config.yaml~
primitives/vo/logging/: path.txt
primitives/vo/src/: framematcher.cpp
primitives/vo/tests/: testvo.cpp
sim/: ekf_slam.py
slam_ros/: pathx.txt  pathy.txt
slam_ros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
slam_ros/devel/lib/pkgconfig/: slam_composites.pc  slam_primitives.pc
slam_ros/devel/lib/slam_composites/: slam_composites_ekf_odom_grid  slam_composites_ekf_vo  slam_composites_pf_grid  slam_composites_pf_vo_aruco
slam_ros/devel/lib/slam_primitives/: slam_primitives_grid  slam_primitives_pf_vo
slam_ros/devel/share/slam_composites/cmake/: slam_compositesConfig.cmake
slam_ros/devel/share/slam_primitives/cmake/: slam_primitivesConfig.cmake
slam_ros/src/composites/: CMakeLists.txt  CMakeLists.txt~
slam_ros/src/composites/src/: aruco_pf_node.cpp~  ekf_odom_grid.cpp  ekf_odom_grid.cpp~  ekf_vo.cpp  ekf_vo.cpp~  pfWithFusion.cpp~  pf_fusion.cpp~  pf_grid.cpp  pf_grid.cpp~  pf_platform.cpp~  pf_vo_aruco.cpp  pf_vo_aruco.cpp~  scan_predict_node.cpp~
slam_ros/src/primitives/: CMakeLists.txt~  package.xml  package.xml~
slam_ros/src/primitives/src/: grid_map_node.cpp  grid_map_node.cpp~  pf_vo.cpp  pf_vo.cpp~
visionFeatures/src/: arucodetectorcv2.cpp  visionfeaturescoordinator.h
visionFeatures/tests/: testVisionFeatures.cpp  unittest.cpp
vo/: CMakeLists.txt
vo/src/: framematcher.h  vo_utils.cpp  vo_utils.h  vocoordinator.cpp  vocoordinator.h
